<resources>
    <string name="app_name">SSH</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonConnect">Connect!</string>
    <string name="buttonUp">UP!</string>
    <string name="buttonLeft">LEFT!</string>
    <string name="buttonDown">DOWN!</string>
    <string name="buttonRight">RIGHT!</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonChangeTypeControl">type control</string>
</resources>
